Update version info

--- a/languages/cs_CZ.json
+++ b/languages/cs_CZ.json
@@ -2,7 +2,7 @@
 	"theme-data":
 	{
 		"name": "ElTheme3",
-		"description": "Simple and dark theme for Bludit CMS v3"
+		"description": "Simple dark theme for Bludit CMS v3"
 	},
 	"toogle-navigation": "Zobrazit navigaci",
 	"all-posts-from-category": "Všechny příspěvky z rubriky",
