--- a/languages/en.json
+++ b/languages/en.json
@@ -2,7 +2,7 @@
 	"theme-data":
 	{
 		"name": "ElTheme3",
-		"description": "Simple and dark theme for Bludit CMS v3"
+		"description": "Simple dark theme for Bludit CMS v3"
 	},
 	"toogle-navigation": "Toogle navigation",
 	"all-posts-from-category": "All posts from category",
