--- a/languages/cs_CZ.json
+++ b/languages/cs_CZ.json
@@ -2,7 +2,7 @@
 	"theme-data":
 	{
 		"name": "ElTheme3",
-		"description": "Simple dark theme for Bludit CMS v3"
+		"description": "Jednoduchá, tmavá a moderní responszivní šablona vzhledu pro Bludit CMS v3.14"
 	},
 	"toogle-navigation": "Zobrazit navigaci",
 	"all-posts-from-category": "Všechny příspěvky z rubriky",
@@ -15,5 +15,8 @@
 	"no-pages-found": "Žádný obsah nebyl nalezen.",
 	"next-or-previous-post": "Další nebo předchozí příspěvky",
 	"previous": "Předchozí",
-	"next": "Další"
+	"next": "Další",
+	"next-posts": "Další příspěvky",
+	"previous-posts": "Předchozí příspěvky",
+	"translate": "Translate"
 }
