Fix text color in posts, moved screenshots from theme root in to folder screenshots, updated theme URL

--- a/languages/cs_CZ.json
+++ b/languages/cs_CZ.json
@@ -2,7 +2,7 @@
 	"theme-data":
 	{
 		"name": "ElTheme3",
-		"description": "Jednoduchá, tmavá a moderní responszivní šablona vzhledu pro Bludit CMS v3.14"
+		"description": "Jednoduchá, tmavá a moderní responzivní šablona vzhledu pro Bludit CMS v3.14"
 	},
 	"toogle-navigation": "Zobrazit navigaci",
 	"all-posts-from-category": "Všechny příspěvky z rubriky",
